// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<img
  alt="Loading..."
  class="sc-bdVaJa cuYrOR"
/>
`;

exports[`snapshot 2`] = `
<img
  alt="Loading..."
  class="sc-bdVaJa cuYrOR"
  src="add.gif"
/>
`;

exports[`snapshot 3`] = `
<img
  alt="Loading..."
  class="sc-bdVaJa cuYrOR"
/>
`;

exports[`snapshot 4`] = `
<img
  alt="Loading..."
  class="sc-bdVaJa cuYrOR"
  src="move.gif"
/>
`;

exports[`snapshot 5`] = `
<img
  alt="Loading..."
  class="sc-bdVaJa cuYrOR"
/>
`;

exports[`snapshot 6`] = `
<img
  alt="Loading..."
  class="sc-bdVaJa cuYrOR"
  src="sync.gif"
/>
`;
